src/client/assets/styles/shared/CollapsibleBar.scss
.collps{
  background-color: var(--color-primary);
  position: fixed;
  width: 100%;
  // position: absolute;
  // width: 100%;
  // height: auto;
  z-index: 500;
  bottom: 0;

  &__wrp{
    max-width: 1756px;
    margin: auto;
    padding-inline: 2%;
  }

  &__btm__area{
    display: grid;
    grid-template-columns: repeat(4, 1fr);
    padding: 12px 0 10.1px 0;


    // @media (max-width: 991px) {
    //   grid-template-columns: repeat(2,1fr);
    // }
    @media (max-width: 550px) {
      padding: 8px 0 8px 0;
    }
    
  }

  &__date__area{
    border-left: 1px solid var(--color-white);

    // @media (max-width: 991px) {
    //   &:nth-child(3), &:nth-child(4){
    //     display: none;
    //   }
    // }
    
    P{
      font-weight: 400;
font-size: 20px;
line-height: 24px;
color: var(--color-white);
padding-left: 5px;
@media (max-width: 550px){
  font-size: 12px;
 }
    }
  }

  &__top__area{
    position: relative;
  }

  &__btn__area{
    position: absolute;
    top: -41px;
    //center
    left: 50%;
    transform: translateX(-50%);
    width: 100%;
    display: flex;
    justify-content: center;
    z-index: 1000;
    @media (max-width: 550px) {
    top: -32px;
    }

  }

  &__btn{
    border: none;
    font-size: 20px;
    color: var(--color-white);
    padding: 9px 12px;
    display: flex;
    align-items: center;
    background-color: var(--color-primary);
    grid-gap: 8px;
    cursor: pointer;

    @media (max-width: 550px) {
      font-size: 12px;
    }
  }
  
  &__icon{
    transform: rotate(180deg);
  }

  
  &__dot__btn{
    cursor: pointer;
    background-color: transparent;
    border: none;
    display: flex;
    flex-direction: column;
    grid-gap: 4px;
    padding: 0px;
    height: 10px;
    overflow: hidden;
    // &:focus{
    //   border: 2px solid #FFFFFF;
    //   padding: 4px;
    //   border-radius: 5px;

    //   // margin: 4px;
    // }
  }

  &__dot__btn--full{
    height: auto;
  }

  &__dot__area{
    display: grid;
    padding-top: 6px;
    grid-template-columns: repeat(4, 1fr);
    // justify-content: space-between;
    grid-gap: 5px;
    }

    &__dot__wrp{
      display: flex;
      justify-content: space-between;
      grid-gap: 2px;
    }

  &__dot{
    width: 10px;
    height: 10px;
    border-radius: 50%;
    background-color: red;

    @media (max-width: 1024px) {
      width: 8px;
      height: 8px;
    }
    @media (max-width: 550px) {
      width: 4px;
      height: 6px;
    }
  }
}

.red{
  span{
    background-color: #E83328;
  }
}

.yellow{
  span{
    background-color: #FEFF05;
  }
}

.green{
  span{
    background-color: #027200;
  }
}

